# KineticEmpire

./: .env.example  .gitignore  Dockerfile  FUTURES_GRID_README.md  KineticEmpire-idea.md  README.md  check_demo_account.py  config.py  docker-compose.yml  main.py  pyproject.toml  run_bot.py  run_futures_grid.py  run_ultimate_grid.py  start_backend.sh  verify_binance.py
.hypothesis/constants/: 0d7a487102325203  1007029724f106c9  1914f2938bb34f64  1a9c29bdbcccfdca  1dcc89b48370f074  28b2e0e345c6c994  293af8a25bb3d9c8  30f7bab9e54b3cc0  35d0232e74c4a440  3acb819c6015e4b7  3b23d76977f4fb12  43d9e1ac0c6e785e  4c98bb198754f954  4caa3d1a69163a59  560a40e68cc03d38  564396855c888359  6048418cc2e98820  623d2866157e9f52  652333cac58d4ac6  668a70703cbf10b5  670b41e44f7cb696  694c79e13e5480e6  6e66e3edc9c3cb89  6ee4421a72086771  7036e68a9e45e287  8ccb7ab05747e559  92c854e0df22fb3e  99da3a1c4880e75f  a0a8996cd0d17e3a  a2f5d0748c8be04f  (+11 more)
config/: alpha_config.json  config.json
docs/: KINETIC_EMPIRE_V3_DOCUMENTATION.md  QUICK_REFERENCE.md  binance-demo-api-guide.md
tests/: __init__.py  conftest.py  test_alpha_funding.py  test_alpha_portfolio_risk.py  test_alpha_profit_taker.py  test_alpha_pyramiding.py  test_alpha_rfactor.py  test_alpha_trailing.py  test_alpha_wave_rider.py  test_backtest.py  test_binance_demo.py  test_cash_cow_aligner.py  test_cash_cow_circuit_breaker.py  test_cash_cow_crypto.py  test_cash_cow_loss_tracker.py  test_cash_cow_regime_stop.py  test_cash_cow_scorer.py  test_cash_cow_sizer.py  test_cash_cow_upside.py  test_config.py  test_enhanced_ta_models.py  test_entry.py  test_exchange.py  test_exit.py  test_indicators.py  test_integration.py  test_kelly.py  test_models.py  test_optimized_parameters.py  test_persistence.py  test_profitable_trading.py  test_protection.py  test_regime.py  test_scanner.py  test_signal_quality_blacklist.py  test_signal_quality_breakout.py  test_signal_quality_confidence.py  test_signal_quality_direction.py  test_signal_quality_micro.py  test_signal_quality_momentum.py  (+19 more)
(+276 files in other folders)
